@@ -1,9 +1,9 @@
 {
   "name": "LHCbDirac",
-  "version": "v8r5p3",
+  "version": "v8r5p4",
   "used_projects": {
     "project": [
-      [ "Dirac", "v6r17p5",
+      [ "Dirac", "v6r17p6",
         [ "bin", "python", "lib" ]
       ],
       [ "LHCbGrid", "v11r1",
